--- a/host/package.json
+++ b/host/package.json
@@ -19,8 +19,10 @@
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/builder-webpack5": "^6.3.0-beta.7",
     "@storybook/react": "^6.2.9",
     "babel-loader": "^8.2.2",
+    "dotenv-webpack": "^7.0.2",
     "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
